# pytensor-ml

./: .pre-commit-config.yaml  README.md  Untitled.ipynb  environment.yml  pyproject.toml  setup.cfg  testing.ipynb  training_test.ipynb
pytensor_ml/: activations.py  layers.py  loss.py  model.py  optimizers.py
tests/: test_loss.py  test_optimizers.py
