[metadata]
name = pytensor-ml
version = 0.0.0
description = A(nother) deep learning library, build on top of Pytensor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jessegrabowski/pytensor-ml
author = Jesse Grabowski
author_email = jessegrabowski@gmail.com

[options]
packages = find:
install_requires =
    pytensor
    numpy

[options.packages.find]
exclude = tests*
