[metadata]
name = pytensor-ml
version = 0.0.0
description = A(nother) deep learning library, built on top of Pytensor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jessegrabowski/pytensor-ml
authors = Jesse Grabowski, Ricardo Vieira
authors_email = jessegrabowski@gmail.com

[options]
packages = find:
install_requires =
    pytensor
    numpy

[options.packages.find]
exclude = tests*
